kustomize/overlays/flais-auth-forward-simple-test/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-forward
spec:
  forwardAuth:
    address: http://flais-auth-forward.flais-auth-forward-simple-test:8080/api/_oauth
