kustomize/overlays/flais-auth-forward-simple-test/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-forward
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`forward-auth-test.fintlabs.no`) && PathPrefix(`/_oauth`)
      kind: Rule
      services:
        - name: flais-auth-forward
          port: 8080
